src/objects/P7S1_B2BAktionsmitgliederFeedback__c.object
<CustomObject>
    <fields>
        <fullName>P7S1_Abflugort__c</fullName>
        <label>Gewünschter Abflugort</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AbweichendeRechnungsadresse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dieses Feld ist nicht mehr in Verwendung.</description>
        <label>(Feld nicht in Verwendung)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_AnredeBrief__c</fullName>
        <formula>P7S1_Contact__r.Som_AnredeBrief__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anrede Brief</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AnredeDynLanguage__c</fullName>
        <formula>IF(P7S1_Anrede__c=&apos;Herr&apos;, 

IF(P7S1_LanguageCode__c=&apos;en_GB&apos; ,&apos;Mr.&apos;, &apos;Herr&apos;), 

IF(P7S1_LanguageCode__c=&apos;en_GB&apos;, &apos;Ms.&apos;, &apos;Frau&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anrede (dyn. Language)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Anrede__c</fullName>
        <label>Anrede</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_B2BAktionsmitgliedID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>B2B Aktionsmitglied ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_BonuskartenNr__c</fullName>
        <label>Bonuskarten-Nr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>B2B Aktionsmitglieder Feedback</relationshipLabel>
        <relationshipName>B2B_Aktionsmitglieder_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_DatenschutzbedingungenAkzeptiert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Datenschutzbedingungen akzeptiert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_EMail__c</fullName>
        <label>E-Mail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_EigeneAnreise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abweichende Rechnungsadresse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_EigeneSnowboardschuhe__c</fullName>
        <label>Eigene Snowboardschuhe</label>
        <picklist>
            <controllingField>P7S1_Snowboarder__c</controllingField>
            <picklistValues>
                <fullName>Ja / Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nein / No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_EigenerSnowboard__c</fullName>
        <label>Eigener Snowboard</label>
        <picklist>
            <controllingField>P7S1_Snowboarder__c</controllingField>
            <picklistValues>
                <fullName>Ja / Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nein / No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Eishockey__c</fullName>
        <label>Eishockey</label>
        <picklist>
            <picklistValues>
                <fullName>Ja / Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nein / No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Eisstock__c</fullName>
        <label>Eisstock</label>
        <picklist>
            <controllingField>P7S1_Eishockey__c</controllingField>
            <picklistValues>
                <fullName>Ja / Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nein / No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Essen__c</fullName>
        <label>Essen</label>
        <picklist>
            <picklistValues>
                <fullName>Trifft nicht zu.</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetarisch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_EventTeilnahme__c</fullName>
        <label>Event Teilnahme</label>
        <picklist>
            <picklistValues>
                <fullName>Ja / Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nein / No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Firma__c</fullName>
        <label>Firma</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Fluggesellschaft__c</fullName>
        <label>Fluggesellschaft</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Gewicht__c</fullName>
        <label>Gewicht</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Hausnummer__c</fullName>
        <label>Hausnummer</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Koerpergroesse__c</fullName>
        <label>Körpergröße</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_LanguageCode__c</fullName>
        <formula>CASE(TEXT(P7S1_Contact__r.SomTv_Kommunikationssprache__c), 
&apos;deutsch&apos;, &apos;de_De&apos;, 
&apos;englisch&apos;, &apos;en_GB&apos;,
&apos;de_De&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_MobilTeilnehmerkreis__c</fullName>
        <inlineHelpText>Wenn Ja, darf die Mobilnummer an den Teilnehmerkreis kommuniziert werden.</inlineHelpText>
        <label>Mobil Teilnehmerkreis</label>
        <picklist>
            <picklistValues>
                <fullName>Ja</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Nein</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Mobil__c</fullName>
        <label>Mobil</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Ort__c</fullName>
        <label>Ort</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_PLZ__c</fullName>
        <label>PLZ</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Parkplatz__c</fullName>
        <label>Parkplatz</label>
        <picklist>
            <picklistValues>
                <fullName>Ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nein</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Rechnungsadresse__c</fullName>
        <label>Rechnungsadresse</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_Registrierungscode__c</fullName>
        <externalId>true</externalId>
        <label>Registrierungscode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Schuhgrosse__c</fullName>
        <label>Schuhgröße</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ShuttleBus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shuttle Bus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_SkiSnowboard__c</fullName>
        <label>Eigene Ski</label>
        <picklist>
            <controllingField>P7S1_Skifahrer__c</controllingField>
            <picklistValues>
                <fullName>Ja / Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nein / No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Skifahrer__c</fullName>
        <label>Skifahrer</label>
        <picklist>
            <picklistValues>
                <fullName>Anfänger / Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortgeschritten / Advanced learner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profi / Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kein Interesse / No interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_SkischuheSnowboardschuhe__c</fullName>
        <label>Eigene Skischuhe</label>
        <picklist>
            <controllingField>P7S1_Skifahrer__c</controllingField>
            <picklistValues>
                <fullName>Ja / Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nein / No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Skistoecke__c</fullName>
        <label>Eigene Skistöcke</label>
        <picklist>
            <controllingField>P7S1_Skifahrer__c</controllingField>
            <picklistValues>
                <fullName>Ja / Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nein / No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Snowboarder__c</fullName>
        <label>Snowboarder</label>
        <picklist>
            <picklistValues>
                <fullName>Anfänger / Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortgeschritten / Advanced learner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profi / Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kein Interesse / No interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Zusage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Strasse__c</fullName>
        <label>Strasse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Veranstaltungsort__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eigene Anreise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Vorname__c</fullName>
        <label>Vorname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ZustimmungKosten__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zustimmung Kosten</label>
        <type>Checkbox</type>
    </fields>
    <label>B2B Aktionsmitglieder Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>P7S1_B2BAktionsmitgliedID__c</columns>
        <columns>P7S1_Registrierungscode__c</columns>
        <columns>P7S1_Anrede__c</columns>
        <columns>P7S1_Contact__c</columns>
        <columns>P7S1_EMail__c</columns>
        <columns>P7S1_Firma__c</columns>
        <columns>P7S1_Mobil__c</columns>
        <columns>P7S1_Name__c</columns>
        <columns>P7S1_Ort__c</columns>
        <columns>P7S1_PLZ__c</columns>
        <columns>P7S1_Strasse__c</columns>
        <columns>P7S1_Vorname__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>B2B Aktionsmitglied Feedback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Aktionsmitglieder Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>